# schubmult

./: .gitignore  1.verification.json  5.verification.json  GOOD_PERM.py  RC_GRAPH_20260412_SAVE.py  README.md  SAVE_FACTOR_ALGEBRA_DOESNT_WORK.py  SAVE_rc_graph.py  TODO.txt  awesome_quasisym_tableaux.py  backup_current.py  bang.py  bob_nocket.json  bob_nocket.json.backup  bob_nocket.pkl  bob_nocket.pkl.backup  bob_nocket.verification.json  bob_nocket.verification.json.backup  bongofish.py  bounded_rc_factor_algebra.py  bounded_rc_factor_algebra.tex  bpd_NOTWORK.py  bulbs121254.json  bulbs121254.pkl  bulbs121254.pkl.backup  bulbs121254.verification.json  bulbs121254.verification.json.backup  caveat_pipe_tensors.tex  co-schubert.tex  coproduct_works.py  correct_boing.py  correct_boing_save.py  correct_boing_up.py  curious_check_this_out.py  farting_stink.tex  faster_quasi.py  fatbag.verification.json  fatbag.verification.json.backup  fatbag2.verification.json.backup  file5_tryagain_again.pkl.verification  (+65 more)
.github/: copilot-instructions.md
.github/workflows/: python-package.yml
_lscripts/: B0_moved.py  RA_bijection.py  RA_bk_cycle.py  RA_cycle_proof.py  RA_full_bijection.py  RA_ppstar_rule.py  RA_rule.py  RA_unique_b_is_k.py  RA_via_pieriknotkn1.py  RA_weight_final.py  _profile_pair.py  analyze_B0.py  audit_reflectioncancel.py  bpd_qy_bijection.py  cancel_involution.py  cauchy_groth.py  characterize_cancellation.py  classify_comb_rec.py  compare_models.py  compute_quantum_lr.py  crystal_poc.py  cystal_the_wc_graphs.py  dgroth_by_dschub.py  dissect_RA.py  does_dforest_zero.py  doublegroth_branching.py  dual_groth_lr.py  dual_grove_lr.py  dual_lascoux_lr.py  fast_forest.py  find_ppstar.py  forest_leibniz_lr.py  glide_squash.py  grass_grass_squash.py  groth_bpd_schub.py  groth_branching.py  groth_by_graph_key.py  groth_elem_schub.py  groth_key_decomp.py  groth_key_mul.py  (+103 more)
basedir/: crystal_divided_differences_section.tex  mattsamuelcombinatexas2026.tex  phantom_discussion.tex
docs/: API.md  PACKAGE_API.md  bounded_rc_factor_algebra_spec.tex  index.html  search.js
docs/modules/: __init__.md  _cmd_line_json.md  _fast_double_schubert_polynomial_ring.md  _fast_schubert_polynomial_ring.md  _grid_print.md  _indexing.md  _lr_rule_verify1.md  _mul_utils.md  _play_script.md  abc.md  abstract_schub_poly.md  argparse.md  assoc_test.md  base_schubert_ring.md  bitfield_row.md  build__lib__schubmult____init__.py.md  build__lib__schubmult___base_argparse.py.md  build__lib__schubmult___tests.py.md  build__lib__schubmult__julia_integration____init__.py.md  build__lib__schubmult__julia_integration___julia_variables.py.md  build__lib__schubmult__perm_lib.py.md  build__lib__schubmult__perm_lib____init__.py.md  build__lib__schubmult__perm_lib__perm_lib.py.md  build__lib__schubmult__poly_lib____init__.py.md  build__lib__schubmult__poly_lib__poly_lib.py.md  build__lib__schubmult__poly_lib__schub_poly.py.md  build__lib__schubmult__poly_lib__variables.py.md  build__lib__schubmult__rings____init__.py.md  build__lib__schubmult__rings___quantum_schubert_polynomial_ring.py.md  build__lib__schubmult__rings___schubert_polynomial_ring.py.md  build__lib__schubmult__rings___utils.py.md  build__lib__schubmult__sage____init__.py.md  build__lib__schubmult__sage___fast_double_schubert_polynomial_ring.py.md  build__lib__schubmult__sage___fast_schubert_polynomial_ring.py.md  build__lib__schubmult__sage___indexing.py.md  build__lib__schubmult__sage_integration____init__.py.md  build__lib__schubmult__sage_integration___fast_double_schubert_polynomial_ring.py.md  build__lib__schubmult__sage_integration___fast_quantum_double_schubert_polynomial_ring.py.md  build__lib__schubmult__sage_integration___fast_quantum_schubert_polynomial_ring.py.md  build__lib__schubmult__sage_integration___fast_schubert_polynomial_ring.py.md  (+245 more)
docs/schubmult/: sage_integration.html
schubmult/: perm_lib.py  schubmult_py.py
schubmult-localization/: README.md  requirements.txt
schubmult-localization/examples/: non_principal_products.py  simple_extensions.py  weight_verification.py
schubmult-localization/tests/: test_consistency.py  test_extended_products.py  test_leibniz_extension.py
schubmult/sage_integration/: __init__.py  _fast_double_schubert_polynomial_ring.py  _fast_mixed_double_schubert_polynomial_ring.py  _fast_mixed_quantum_double_schubert_polynomial_ring.py  _fast_schubert_polynomial_ring.py  (+2 more)
src/: ALMOST_MAYBE.py  GOODTHISWORKS.py  OMGTHISWORKS.py  OMGTHISWORKS_WOWOWOWOW.py  THIS_COULD_WORK.py  THIS_IS_THE_FORMULA.py  bob  fiddle_lr_rule.py  file4.pkl  file4.pkl.verification  file4_tryagain.pkl  file4_tryagain.pkl.verification  file4_tryagain_again.pkl  file4_tryagain_again.pkl.verification  file5.pkl  file5_tryagain_again.pkl.verification  one_time_flatten.py  requirements.txt  run_permutation_group6.pkl.backup  run_permutation_group6.pkl.verification  save_this_forever.py  save_this_forever2.py  stinkymaybenot.py  test_not_so_good.py  this_REALLY_REALLY_REALLY_proves_positivity.py  this_REALLY_REALLY_proves_positivity.py  this_REALLY_proves_positivity.py  this_is_the_positive_rule.py  this_is_the_positive_rule2.py  this_proves_positivity.py  this_still_proves_positivity.py
test_data/: test_recording_6.json.verification  test_recording_6.json.verification.backup
web/: API.md  DEPLOY.md  README.md  app.py
wordpress-plugin/: README.md  schubmult-embed.php
writing/: EQUIVARIANT_NOTES.txt  check_beta_isobaric_leibniz.py  co-schubert.tex  double_schubert_bialgebra.tex  forest_lr_R1.tikz  forest_lr_R2.tikz  forest_lr_clip.tikz  forest_lr_trim.tikz  formschub.bib  mattsamuelcombinatexas2026.tex  mscombinatexas2026.tex  operations_rc_graph.tex  quantum_pieri.tex  schubert_bialgebra.bib  schubert_bialgebra.tex  schubert_bialgebra.tex.bak  schubert_bialgebra.tex.bak2  schubert_bialgebra_cas-sc.tex  schubert_bialgebra_cas.abs  schubert_bialgebra_cas.tex  schubert_bialgebra_cut_plan.md  schubert_bialgebra_kitchen_sink.tex  schubert_bialgebra_ktheory.tex  schubert_bialgebra_paperA_mockup.tex  schubert_bialgebra_transplant_map.md
(+782 files in other folders)
