[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"



[project]
name = "schubmult"
license = {file = "LICENSE"}
dependencies = [
        "numpy",
        "PuLP>=2.7.0",
        "symengine>=0.14.0",
        "sympy>=1.13.3",
        "psutil",
        "cachetools",
        "sortedcontainers",
        "setuptools"
]
requires-python = ">=3.9"
authors = [
  {name = "Matt Samuel", email = "schubmult@gmail.com"},
]
maintainers = [
  {name = "Matt Samuel", email = "schubmult@gmail.com"},
]
description = "Package for algebraic computation with single, double, and quantum Schubert polynomials"
readme = "README.md"
keywords = ["Schubert", "polynomial", "double", "algebra"]
classifiers = [
  "Programming Language :: Python",
]
dynamic = ["version"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "tests",
]

# Same as Black.
line-length = 200
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "YTT",
    "COM",
    "C4",
    "DTZ",
    "ISC",
    "ICN",
    "PIE",
    "PT",
    "RET",
    "TID",
    "ARG",
    "PLE",
    "PLW",
    "RUF",
    "T201"
]
ignore = [
    "N806",
    "D105",
    "D107",
    "D203",
    "D212",
    "UP006",
    "UP007",
    "D400",
    "D406",
    "D407",
    "PLC1901",
    "UP035",
    "ARG005",
    "PLW2901"
]
unfixable = ["F401", "F841"]

[tool.ruff.lint.per-file-ignores]
"test*.py" = ["ALL"]
"tst*.py" = ["ALL"]
"schubmult_*.py" = ["T201"]
"argparse.py" = ["T201"]

[project.optional-dependencies]
sage = ["sagemath-standard"]


[project.urls]
Homepage = "http://schubmult.org"
Repository = "https://github.com/matthematics/schubmult"

[tool.setuptools.packages.find]
where = ["src"]
include = ["schubmult*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false

[project.scripts]
schubmult_py = "schubmult.scripts.schubmult_py:main"
schubmult_double = "schubmult.scripts.schubmult_double:main"
schubmult_q = "schubmult.scripts.schubmult_q:main"
schubmult_q_double = "schubmult.scripts.schubmult_q_double:main"
