[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"



[project]
name = "schubmult"
license = {file = "LICENSE"}
dependencies = [
        "numpy",
        "joblib",
        "latex2sympy2_extended",
        "PuLP>=2.7.0",
        "symengine>=0.14.1",
        "sympy>=1.14.0",
        "psutil",
        "cachetools",
        "sortedcontainers",
        "setuptools"
]
requires-python = ">=3.9"
authors = [
  {name = "Matt Samuel", email = "schubmult@gmail.com"},
]
maintainers = [
  {name = "Matt Samuel", email = "schubmult@gmail.com"},
]
description = "Package for algebraic computation with single, double, and quantum Schubert polynomials"
readme = "README.md"
keywords = ["Schubert", "polynomial", "double", "algebra"]
classifiers = [
  "Programming Language :: Python",
]
dynamic = ["version"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "tests",
]

# Same as Black.
line-length = 200
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "YTT",
    "COM",
    "C4",
    "DTZ",
    "ISC",
    "ICN",
    "PIE",
    "PT",
    "RET",
    "TID",
    "ARG",
    "PLE",
    "PLW",
    "RUF",
    "T201"
]
ignore = [
    "E741",
    "RUF003",
    "N806",
    "D105",
    "D107",
    "D203",
    "D212",
    "UP006",
    "UP007",
    "D400",
    "D406",
    "D407",
    "PLC1901",
    "UP035",
    "ARG005",
    "PLW2901",
    "T201",
    "RET504",
    "RUF002",
    "E501",
    "TID252",
    "RUF001"
]
unfixable = ["F401", "F841"]

[tool.ruff.lint.per-file-ignores]
"test*.py" = ["ALL"]
"src/schubmult/_scripts/*" = ["ALL"]
"src/schubmult/rings/*rc_graph_module.py" = ["ALL"]
"src/schubmult/rings/GOOD*" = ["ALL"]
"!src/*" = ["ALL"]
"tst*.py" = ["ALL"]
"mul_grass.py" = ["ALL"]
"working*.py" = ["ALL"]
"schubmult_*.py" = ["T201"]
"argparse.py" = ["T201"]
"__init__.py" = ["F401"]

[project.optional-dependencies]
visualization = ["matplotlib>=3.0"]


[project.urls]
Homepage = "http://schubmult.org"
Repository = "https://github.com/matthematics/schubmult"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["schubmult*"]  # package names should match these glob patterns (["*"] by default)
namespaces = false

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools_scm]
version_file = "src/schubmult/_version.py"
fallback_version = "4.0.0.dev0"

[project.scripts]
schubmult_py = "schubmult._scripts.schubmult_py:main"
schubmult_double = "schubmult._scripts.schubmult_double:main"
schubmult_q = "schubmult._scripts.schubmult_q:main"
schubmult_q_double = "schubmult._scripts.schubmult_q_double:main"
schubert_formula = "schubmult._scripts.schubert_formula:main"
schubprompt = "schubmult._scripts.schubprompt:main"
verify_lr_rule = "schubmult._scripts.lr_verification:main"
lr_rule_verify = "schubmult._scripts.lr_rule_verify:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-vv",
    "--capture=tee-sys"
]
