[metadata]
name = schubmult
description_file = README.md
version = 2.1.0

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    schubmult_py=scripts.schubmult_py._script:main
    schubmult_double=scripts.schubmult_double._script:main
    schubmult_q=scripts.schubmult_q._script:main
    schubmult_q_double=scripts.schubmult_q_double._script:main
