[metadata]
name = schubmult
description_file = README.md
version = 2.1.0

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
exclude=
    tests
    tests.*

[options.entry_points]
console_scripts = 
    schubmult_py=schubmult.scripts.schubmult_py._script:main
    schubmult_double=schubmult.scripts.schubmult_double._script:main
    schubmult_q=schubmult.scripts.schubmult_q._script:main
    schubmult_q_double=schubmult.scripts.schubmult_q_double._script:main
