[metadata]
name = schubmult
description_file = README.md
version = 3.0.dev

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
exclude=
    tests
    tests.*    

[options.entry_points]
console_scripts = 
    schubmult_py=schubmult.scripts.schubmult_py:main
    schubmult_double=schubmult.scripts.schubmult_double:main
    schubmult_q=schubmult.scripts.schubmult_q:main
    schubmult_q_double=schubmult.scripts.schubmult_q_double:main
